--- a/app/components/Portfolio/PortfolioNav.css
+++ b/app/components/Portfolio/PortfolioNav.css
@@ -2,3 +2,7 @@
 	margin: auto;
 	max-width: 465px;
 }
+
+.content {
+	text-align: center;
+}
